--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .hero {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
   background-image: url(./images/91692.jpg);
   background-size: cover;
   background-position: center;
@@ -55,7 +55,7 @@ h1 {
 
 .side-bar {
   width: 50px;
-  height: 1000px;
+  height: 100vh;
   background: linear-gradient(#00466e, #000729);
   position: absolute;
   right: 0;
