change font weight

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 button {
   color: #fbfcfd;
+  font-weight: bold;
   padding: 10px 25px;
   background: transparent;
   border: 1px solid #ffffff;
